--- a/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/MainPage.xaml
+++ b/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/MainPage.xaml
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Xam.Views.Loader.MainPage">
+             x:Class="Xam.Views.Loader.MainPage"
+             xmlns:CustomLoaders="clr-namespace:Xam.Views.Loader.Portable.CustomControls;assembly=Xam.Views.Loader.Portable">
 
-    <BoxView x:Name="boxBackground" Scale="5" AnchorX="1" AnchorY="0"
+    <!--<StackLayout>
+        <loaders:
+    </StackLayout>-->
+    <StackLayout>
+        <Switch x:Name="LoaderToggler"></Switch>
+        <CustomLoaders:LinearLoader IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="0,10"/> 
+    </StackLayout>
+    <!--<BoxView x:Name="boxBackground" Scale="5" AnchorX="1" AnchorY="0"
                  HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="2" WidthRequest="400">
         <BoxView.Background>
             <LinearGradientBrush>
@@ -15,6 +23,6 @@
                 <GradientStop Color="White" Offset="0.3"/>
             </LinearGradientBrush>
         </BoxView.Background>
-    </BoxView>
+    </BoxView>-->
 
 </ContentPage>
