--- a/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/MainPage.xaml
+++ b/Xam.Views.Loader/Xam.Views.Loader/Xam.Views.Loader/MainPage.xaml
@@ -5,9 +5,6 @@
              xmlns:CustomLoaders="clr-namespace:Xam.Views.Loader.Portable.CustomControls;assembly=Xam.Views.Loader.Portable"
              xmlns:Enums="clr-namespace:Xam.Views.Loader.Portable.Enums;assembly=Xam.Views.Loader.Portable">
 
-    <!--<StackLayout>
-        <loaders:
-    </StackLayout>-->
     <StackLayout>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -21,34 +18,19 @@
         <Label Grid.Row="0" Grid.Column="0">Speed</Label>
         <CustomLoaders:EnumBindablePicker x:TypeArguments="Enums:SpeedDuration" SelectedItem="{Binding SelectedSpeed}"></CustomLoaders:EnumBindablePicker>
 
-        <CustomLoaders:LinearLoader  Direction="right" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="0,10"  Speed="{Binding SelectedSpeed}"/>
+        <CustomLoaders:LinearLoader  LoadingDirection="Left" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="0,10"  Speed="{Binding SelectedSpeed}"/>
 
-        <CustomLoaders:CircularLoader LoadingType="circle" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
+        <CustomLoaders:CircularLoader LoadingType="Circular" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
             <Grid HeightRequest="40" WidthRequest="40" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"/>
         </CustomLoaders:CircularLoader>
 
-        <CustomLoaders:CircularLoader LoadingType="flip" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
+        <CustomLoaders:CircularLoader LoadingType="FlipInXAxis" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
             <Grid HeightRequest="40" WidthRequest="40" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"/>
         </CustomLoaders:CircularLoader>
 
-        <CustomLoaders:CircularLoader LoadingType="verticle" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
+        <CustomLoaders:CircularLoader LoadingType="FlipInYAxis" IsLoading="{Binding IsToggled}" BindingContext="{x:Reference LoaderToggler}" Margin="40"  Speed="{Binding SelectedSpeed}">
             <Grid HeightRequest="40" WidthRequest="40" VerticalOptions="Center" HorizontalOptions="Center" BackgroundColor="Black"/>
         </CustomLoaders:CircularLoader>
     </StackLayout>
-
-   
-    <!--<BoxView x:Name="boxBackground" Scale="5" AnchorX="1" AnchorY="0"
-                 HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="2" WidthRequest="400">
-        <BoxView.Background>
-            <LinearGradientBrush>
-                <GradientStop Color="White" Offset="0.3"/>
-                <GradientStop Color="White" Offset="0.3"/>
-                <GradientStop Color="Green" Offset="0.4"/>
-                <GradientStop Color="Green" Offset="0.4"/>
-                <GradientStop Color="White" Offset="0.3"/>
-                <GradientStop Color="White" Offset="0.3"/>
-            </LinearGradientBrush>
-        </BoxView.Background>
-    </BoxView>-->
 
 </ContentPage>
